RESOLVED FIXED72082
ApplicationCache manifest should work with any MIME type
https://bugs.webkit.org/show_bug.cgi?id=72082
Summary ApplicationCache manifest should work with any MIME type
Alexey Proskuryakov
Reported 2011-11-10 18:14:44 PST
The spec changed, it no longer requires MIME type to be text/cache-manifest. Boo! http://html5.org/tools/web-apps-tracker?from=6822&to=6823
Attachments
mime (6.59 KB, patch)
2011-11-16 12:56 PST, Michael Nordman
ap: review+
webkit.review.bot: commit-queue-
mime (7.38 KB, patch)
2011-11-16 16:01 PST, Michael Nordman
no flags
Alexey Proskuryakov
Comment 1 2011-11-16 00:34:52 PST
*** Bug 72449 has been marked as a duplicate of this bug. ***
Michael Nordman
Comment 2 2011-11-16 12:56:40 PST
WebKit Review Bot
Comment 3 2011-11-16 14:53:35 PST
Comment on attachment 115428 [details] mime Rejecting attachment 115428 [details] from commit-queue. New failing tests: http/tests/appcache/wrong-content-type.html Full output: http://queues.webkit.org/results/10499141
Michael Nordman
Comment 4 2011-11-16 15:01:41 PST
The irony is that a chromium cl to ignore the mime-type waiting for this webkit patch to land, and instead of just skipping the test for chromium i choose to update webcore's logic to match... and of course the commit bot rejects it. The joy of multi-sided patches :)
WebKit Review Bot
Comment 5 2011-11-16 15:26:24 PST
Comment on attachment 115428 [details] mime Attachment 115428 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/10505097 New failing tests: http/tests/appcache/wrong-content-type.html
Michael Nordman
Comment 6 2011-11-16 16:01:33 PST
Created attachment 115468 [details] mime temporarily skip this test in chromium's expecations file
Alexey Proskuryakov
Comment 7 2011-11-16 16:06:22 PST
Comment on attachment 115468 [details] mime Setting r+ - commit queue won't land with only a cq+ unless you manually in reviewer name in ChangeLog.
WebKit Review Bot
Comment 8 2011-11-16 16:06:44 PST
Comment on attachment 115468 [details] mime Rejecting attachment 115468 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/10485928
WebKit Review Bot
Comment 9 2011-11-16 17:46:34 PST
Comment on attachment 115468 [details] mime Clearing flags on attachment: 115468 Committed r100541: <http://trac.webkit.org/changeset/100541>
WebKit Review Bot
Comment 10 2011-11-16 17:46:40 PST
All reviewed patches have been landed. Closing bug.
Michael Nordman
Comment 11 2011-12-15 12:42:31 PST
*** Bug 74629 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.