ApplicationCache manifest should work with any MIME type. https://bugs.webkit.org/show_bug.cgi?id=72082

Source/WebCore:

Reviewed by Alexey Proskuryakov.

* loader/appcache/ApplicationCacheGroup.cpp:
(WebCore::ApplicationCacheGroup::didReceiveManifestResponse): Remove the test for a particular type.

LayoutTests:

Update the wrong-content-type test to expect the appcache to succeed given a text/plain contentType.

Reviewed by Alexey Proskuryakov.

* http/tests/appcache/wrong-content-type-expected.txt:
* http/tests/appcache/wrong-content-type.html:
* platform/chromium/test_expectations.txt: Temporarily skip this test in chromium.
* platform/chromium-cg-mac/http/tests/appcache/wrong-content-type-expected.txt: Removed.
* platform/chromium-mac/http/tests/appcache/wrong-content-type-expected.txt: Removed.
* platform/chromium-win/http/tests/appcache/wrong-content-type-expected.txt: Removed.


Canonical link: https://commits.webkit.org/89057@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100541 268f45cc-cd09-0410-ab3c-d52691b4dbfc